syntax = "proto3";

package ai.metathings.service.cored;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "entity.proto";
import "github.com/nayotta/metathings/pkg/proto/common/state/entity_state.proto";

message ListEntitiesRequest {
	google.protobuf.StringValue core_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue service_name = 3;
	ai.metathings.state.EntityState state = 4;
}

message ListEntitiesResponse {
	repeated Entity entities = 1;
}
